[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/UIElements/png-clipart-brown-wooden-wall-desktop-computer-icons-wood-stain-wooden-shop-background-miscellaneous-texture.png" type="Texture" id=1]
[ext_resource path="res://GUI/UIElements/red-button.png" type="Texture" id=2]
[ext_resource path="res://GUI/scenes/Login.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://GUI/Fonts/Convergence-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = SubResource( 1 )

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -300.0
margin_right = 225.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 44.0
margin_top = 50.0
margin_right = -44.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 362.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "The Title"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 40.0
margin_right = 362.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 45 )

[node name="Username" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 89.0
margin_right = 362.0
margin_bottom = 103.0
text = "Username"

[node name="UsernameEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 107.0
margin_right = 362.0
margin_bottom = 131.0

[node name="Password" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 135.0
margin_right = 362.0
margin_bottom = 149.0
text = "Password"

[node name="PasswordEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 153.0
margin_right = 362.0
margin_bottom = 177.0

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 181.0
margin_right = 362.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 45 )

[node name="LoginButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 99.0
margin_top = 230.0
margin_right = 263.0
margin_bottom = 296.0
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/LoginButton"]
margin_left = 58.7338
margin_top = 20.6362
margin_right = 98.7338
margin_bottom = 34.6362
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NinePatchRect/VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
